--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: New version of TY mobile app for multi platforms.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.5.4+4
+version: 0.6.0
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -157,6 +157,8 @@ flutter:
     - assets/images/
     - assets/images/vip/
     - assets/images/index/
+    - assets/images/roller/
+    - assets/images/example/
     - config/app_config.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
