--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: New version of TY mobile app for multi platforms.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.6.0+1
+version: 0.6.0+2
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -115,6 +115,7 @@ dependencies:
   share_extend: ^1.1.7
   # Icon Badge https://pub.dev/packages/badges
   badges: ^1.1.1
+  adv_fab: ^1.0.3
 
 
 dev_dependencies:
